# jeopardy

./: .gitignore  AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev
backend/categories/: cartoon_network.json  cartoons.json  disney.json  gen_z_slang.json  grammar.json  movies.json  music.json  musicals.json  nickelodeon.json  science.json  tv.json  u_u.json  us_history.json
backend/docker/: migrate-entrypoint.sh
backend/migrations/: 20260526174317_create_games.sql  20260526195609_players.sql  20260602103000_gameplay_session_metadata.sql  20260621131500_player_tokens.sql
backend/question-packs/: classic.json  demo-2.json  pop-culture.json
backend/src/: app.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  state.rs
backend/src/content/: loader.rs  mod.rs  models.rs  service.rs
backend/src/domain/: jeopardy.rs  jeopardy_tests.rs  mod.rs
backend/src/domain/randomized/: invariants.rs  mod.rs  regressions.rs  runner.rs  scenario.rs
backend/src/games/: api.rs  auth.rs  codes.rs  mod.rs  models.rs  repository.rs  service.rs  state.rs  tests.rs
backend/src/players/: models.rs  repository.rs
backend/src/realtime/: hub.rs  messages.rs  mod.rs  ws.rs
backend/src/sessions/: events.rs  manager.rs  memory.rs  mod.rs  redis_store.rs  runtime.rs  store.rs
backend/tests/regressions/: jeopardy_random_seeds.txt
docs/design/: 02-06-26-backend-gameplay-design.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json  svelte.config.js
(+34 files in other folders)
